change the if in the build container file
Signed-off-by: Ramona Rautenberg <rautenberg@osism.tech>

--- a/.github/workflows/build-container-image.yml
+++ b/.github/workflows/build-container-image.yml
@@ -55,4 +55,6 @@ jobs:
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
           VERSION: ${{ matrix.version }}
           REPOSITORY: osism/enterprise/kosmoo
-        if: github.ref == 'refs/heads/main'
+        if: |
+          github.repository == 'osism/container-image-kosmoo' &&
+          github.ref == 'refs/heads/main'
